# Hebrew

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pull_request_template.md  pyproject.toml  requirements.txt  sitemap.xml  test.py  test_main.py
.github/workflows/: ci.yml  codecov.yml  codeql-analysis.yml  test.yml
.gitihub/workflows/: test.yml
HebrewString/: __init__.py  grapheme.py  hebrew_string.py  main.py
changelog/: index.html
code_reference/chars/classes_and_functions/: index.html
code_reference/chars/constants/: index.html
code_reference/gematria/: index.html
code_reference/grapheme_string/: index.html
code_reference/hebrew/: index.html
code_reference/numerical_conversions/convert/: index.html
code_reference/numerical_conversions/substitute/: index.html
contributing/: index.html
docs/: CNAME  changelog.md  license.md
docs/code_reference/: gematria.md  grapheme_string.md  hebrew.md
docs/code_reference/chars/: classes_and_functions.md  constants.md
docs/code_reference/numerical_conversions/: convert.md  flags.md  mappings.md  substitute.md
docs/css/: mkdocstrings.css  style.css
docs/docstrings/: chars.md  grapheme_string.md  hebrew.md
docs/docstrings/chars/: classes_and_functions.md  constants.md
hebrew/: __init__.py  chars.py  gematria.py  grapheme_string.py  hebrew.py  hebrew_glyph.py  hebrew_obj.py  numerical_conversion.py
hebrew/numerical_conversion/: convert.py  flags.py  mappings.py  substitute.py
hebrewstring/: __init__.py  grapheme_string.py
license/: index.html
search/: search_index.json
tests/: test_chars.py  test_gematria.py  test_grapheme_string.py  test_hebrew.py  test_hebrew_glyph.py  test_hebrew_package.py  test_hebrew_string.py  test_hebrewstring.py  test_numerical_conversion.py
tests/test_gematria/: test_albam.py  test_atbash.py  test_gematria.py  test_mispar_gadol.py  test_mispar_hechrachi.py  test_mispar_katan.py  test_mispar_meshulash.py  test_mispar_musafi.py  test_mispar_perati.py  test_mispar_siduri.py
